--- a/Slides/WLU - CP202 - September 10, 2019.html
+++ b/Slides/WLU - CP202 - September 10, 2019.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0067)http://wlu-cp202.appspot.com/CP202/Fall2019/W2/Sept10/index.html#/8 -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-# change line 125
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<title>WLU - CP202 - September 10, 2019</title>
@@ -122,20 +121,14 @@
 <p style="color:white; opacity:.9" class="blueSubHeadingColor slideTextBackground">Demo time... <!-- --></p>
 </section>
 
-<section data-background-iframe="https://outlook.office365.com/mail/inbox" class="future" style="top: 364px; display: block;" hidden="" aria-hidden="true">
-	<aside class="notes">
-		- Highlight Netscape
-		- Look for yellow line (lynx and demo it)
-		- You can make your 	own web browser (Mozilla is open source)
-	</aside>
-</section>
+
 
 
 <section hidden="" aria-hidden="true" class="stack past" style="top: 0px; display: block;">
-					<section data-markdown="" data-background="/img/fernando-reyes-wiP1r68Ylto-unsplash.jpg" data-background-size="center" data-background-repeat="repeat" data-markdown-parsed="true" data-background-image="/img/fernando-reyes-wiP1r68Ylto-unsplash.jpg" style="top: 100px; display: block;"><h3 id="web-devevelopment---element-classslidetextbackground---" class="slideTextBackground">Feasibility<!-- --></h3>
-<p class="slideTextBackground">Minimal Competition<!-- --></p>
-<p class="slideTextBackground">Perfect for KW Tech Atmosphere<!-- --></p>
-<p class="slideTextBackground">Excellent Room for Growth<!-- --></p>
+					<section data-markdown="" data-background="/img/fernando-reyes-wiP1r68Ylto-unsplash.jpg" data-background-size="center" data-background-repeat="repeat" data-markdown-parsed="true" data-background-image="/img/fernando-reyes-wiP1r68Ylto-unsplash.jpg" style="top: 100px; display: block;"><h3 id="web-devevelopment---element-classslidetextbackground---" class="slideTextBackground">Business Model<!-- --></h3>
+	<p class="slideTextBackground">Free w/ Limited Access<!-- --></p>
+<p class="slideTextBackground">Subscription-Based Fee for Firms/Startups<!-- --></p>
+<p class="slideTextBackground">Pool-Based Fee<!-- --></p>
 </section>
 
 <section data-background-video-muted="" data-background-video="/img/isorepublic-free-video-music-turntable.webm,/img/isorepublic-free-video-music-turntable.mp4" class="future" style="top: 264px; display: none;" hidden="" aria-hidden="true">
