--- a/Slides/WLU - CP202 - September 10, 2019.html
+++ b/Slides/WLU - CP202 - September 10, 2019.html
@@ -94,8 +94,8 @@
 <p class="pinkBackground smallText slideTextBackground">Social platform that connects investors with startups in the KW region based on search keywords (sector/industry, market-size, desired capital, geographic location) via 3 major platforms (Web, Android, iOS)</p>
 <!-- -->
 
-<p class="slideTextBackground"> Pool of Investors<!-- --></p>
-<p class="pinkBackground smallText slideTextBackground">Transforms traditional approaches to seed funding for startups by allowing regular people to participate in a pool of investors and raise capital</p>
+<p class="slideTextBackground"> Selection of Investors<!-- --></p>
+<p class="pinkBackground smallText slideTextBackground">Expands the option of available investors based on specific preferences of startups</p>
 <!-- -->
 
 </section>
@@ -109,8 +109,8 @@
 																												Allows investors to conduct screening prior to due diligence.</p>
 <!-- -->
 
-<p class="slideTextBackground"> Trust and Ease of Access<!-- --></p>
-<p class="pinkBackground smallText slideTextBackground">The platform contains information on credentials of the management team, their vision, total funding secured, and future goals. Investors will also be notified of startups that match investors' criteria of interest.</p>
+<p class="slideTextBackground"> Pool of Investors <!-- --></p>
+<p class="pinkBackground smallText slideTextBackground">Transforms traditional approaches to seed funding for startups by allowing regular people to participate in a pool of investors and raise capital</p>
 <!-- -->
 
 </section>
